--- a/app/src/main/res/layout/rewards_linking.xml
+++ b/app/src/main/res/layout/rewards_linking.xml
@@ -8,7 +8,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="@dimen/margin_16dp"
+    android:paddingTop="@dimen/margin_16dp"
     >
     <!--android:visibility="gone"-->
     <!--android:background="@color/background_extra_light_gray"-->
@@ -45,18 +45,31 @@
         android:inputType="phone"
         android:imeOptions="actionDone"
         android:maxLength="14"/>
-    <Button
+
+    <TextView
         android:id="@+id/rewards_link_acct_button"
         android:layout_width="wrap_content"
-        android:layout_height="40dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/verticalspacing_8dp"
         android:layout_below="@id/rewards_phone_number"
         android:layout_alignParentRight="true"
         android:text="@string/link_account"
-        android:textSize="@dimen/fontsize_16sp"
-        android:textColor="@color/staples_white"
+        android:textSize="@dimen/fontsize_18sp"
+        android:textColor="@color/staples_green"
         android:padding="@dimen/action_bar_half_margin"
-        android:background="@drawable/add_to_cart"
         />
+    <!--<Button-->
+        <!--android:id="@+id/rewards_link_acct_button"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="40dp"-->
+        <!--android:layout_marginTop="@dimen/verticalspacing_8dp"-->
+        <!--android:layout_below="@id/rewards_phone_number"-->
+        <!--android:layout_alignParentRight="true"-->
+        <!--android:text="@string/link_account"-->
+        <!--android:textSize="@dimen/fontsize_16sp"-->
+        <!--android:textColor="@color/staples_white"-->
+        <!--android:padding="@dimen/action_bar_half_margin"-->
+        <!--android:background="@drawable/add_to_cart"-->
+        <!--/>-->
 </RelativeLayout>
 
