--- a/app/src/main/res/layout/rewards_linking_fragment.xml
+++ b/app/src/main/res/layout/rewards_linking_fragment.xml
@@ -8,6 +8,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:paddingLeft="@dimen/margin_16dp"
+    android:paddingRight="@dimen/margin_16dp"
     android:background="@color/staples_white">
 
     <include layout="@layout/rewards_linking" android:id="@+id/link_rewards_acct_layout"/>
