--- a/app/src/main/res/layout/login_create_page.xml
+++ b/app/src/main/res/layout/login_create_page.xml
@@ -42,7 +42,7 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/staples_white"
+        android:textColor="@color/staples_black"
         android:text="@string/create_account"
         android:id="@+id/register_button"
         android:layout_marginTop="30dp"
