--- a/app/src/main/res/layout/cart_fragment.xml
+++ b/app/src/main/res/layout/cart_fragment.xml
@@ -11,8 +11,9 @@
     android:background="@color/staples_off_white"
     android:orientation="vertical">
 
-    <!--checkout button-->
+    <!--free shipping message-->
     <android.support.v7.widget.CardView
+        android:id="@+id/free_shipping_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
@@ -22,16 +23,14 @@
         card_view:cardCornerRadius="2dp"
         card_view:cardElevation="2dp"
         android:background="@color/staples_light_gray">
-
-    <!--free shipping message-->
-    <TextView
-        android:id="@+id/free_shipping_msg"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:padding="@dimen/action_bar_half_margin"
-        android:textColor="@color/staples_green"
-        android:textSize="@dimen/fontsize_14sp"/>
+        <TextView
+            android:id="@+id/free_shipping_msg"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:padding="@dimen/action_bar_half_margin"
+            android:textColor="@color/staples_green"
+            android:textSize="@dimen/fontsize_14sp"/>
     </android.support.v7.widget.CardView>
 
     <!--empty cart messages-->
