--- a/app/src/main/res/layout/login_signin_page.xml
+++ b/app/src/main/res/layout/login_signin_page.xml
@@ -24,6 +24,7 @@
         android:inputType="textPassword"
         android:ems="10"
         android:id="@+id/password"
+        android:maxLength="12"
         android:hint="@string/password"
         android:imeOptions="actionDone"
         android:singleLine="true"
