fixing jira 934 - overlapping of add-on message

--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -62,7 +62,7 @@
         <!--price-->
 		<app.staples.mobile.cfa.widget.PriceSticker
 			android:id="@+id/cartitem_price"
-			android:layout_below="@id/overweight"
+			android:layout_below="@id/addon"
 			style="@style/SmallPriceSticker"
 			android:padding="0dp"/>
 
