--- a/app/src/main/res/layout/coupon_item_applied.xml
+++ b/app/src/main/res/layout/coupon_item_applied.xml
@@ -16,7 +16,7 @@
         android:layout_centerVertical="true"
         android:orientation="horizontal">
         <TextView
-            android:id="@+id/coupon_item_field1"
+            android:id="@+id/coupon_amount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:minWidth="100dp"
@@ -24,7 +24,7 @@
             android:textColor="@color/staples_black"
             />
         <TextView
-            android:id="@+id/coupon_item_field2"
+            android:id="@+id/coupon_expire"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="@dimen/fontsize_16sp"
