--- a/app/src/main/res/layout/coupon_item_redeemable.xml
+++ b/app/src/main/res/layout/coupon_item_redeemable.xml
@@ -1,77 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-  ~ Copyright (c) 2014 Staples, Inc. All rights reserved.
-  -->
-
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/coupon_item_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingTop="4dp"
-    android:paddingBottom="4dp">
-
-    <!--text fields-->
-    <LinearLayout
+    android:paddingBottom="4dp"
+    android:orientation="horizontal">
+    <TextView
+        android:id="@+id/coupon_amount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true"
-        android:orientation="horizontal">
-        <TextView
-            android:id="@+id/coupon_item_field1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/fontsize_16sp"
-            android:textColor="@color/staples_black"
-            android:minWidth="100dp"/>
-        <TextView
-            android:id="@+id/coupon_item_field2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/fontsize_16sp"
-            android:textColor="@color/staples_black"
-            />
-    </LinearLayout>
-
-    <!--ADD button-->
+        android:minWidth="72dp"
+        android:layout_gravity="center_vertical"
+        android:gravity="right"
+        android:textSize="@dimen/fontsize_16sp"
+        android:textColor="@color/staples_black"/>
+    <TextView
+        android:id="@+id/coupon_expire"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:layout_gravity="center_vertical"
+        android:gravity="center"
+        android:textSize="@dimen/fontsize_16sp"
+        android:textColor="@color/staples_black"/>
     <Button
         android:id="@+id/reward_add_button"
-        android:layout_width="70dp"
+        android:layout_width="60dp"
         android:layout_height="36dp"
-        android:layout_alignParentRight="true"
-        android:layout_gravity="center_vertical"
+        android:layout_gravity="right|center_vertical"
         android:background="@drawable/rounded_corner_green"
         android:text="@string/add"
         android:textSize="@dimen/fontsize_16sp"
-        android:textColor="@color/staples_white"
-        android:paddingTop="4dp"
-        android:paddingBottom="4dp"
-        android:paddingLeft="8dp"
-        android:paddingRight="8dp"/>
-
+        android:textColor="@color/staples_white"/>
+    <Button
+        android:id="@+id/reward_view_button"
+        android:layout_width="60dp"
+        android:layout_height="36dp"
+        android:layout_gravity="right|center_vertical"
+        android:layout_marginLeft="8dp"
+        android:background="@drawable/rounded_corner_green"
+        android:text="@string/view"
+        android:textSize="@dimen/fontsize_16sp"
+        android:textColor="@color/staples_white"/>
     <!--REMOVE button (only used in rewards dashboard)-->
     <ImageView
         android:id="@+id/reward_remove_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_gravity="center_vertical"
+        android:layout_gravity="right|center_vertical"
+        android:layout_marginLeft="8dp"
         android:src="@drawable/ic_close_black"
         android:visibility="gone"/>
-    <!--<Button-->
-        <!--android:id="@+id/reward_remove_button"-->
-        <!--android:layout_width="85dp"-->
-        <!--android:layout_height="36dp"-->
-        <!--android:layout_alignParentRight="true"-->
-        <!--android:layout_gravity="center_vertical"-->
-        <!--android:background="@color/staples_light_gray"-->
-        <!--android:text="@string/remove"-->
-        <!--android:textSize="@dimen/fontsize_14sp"-->
-        <!--android:textColor="@color/staples_black"-->
-        <!--android:paddingTop="4dp"-->
-        <!--android:paddingBottom="4dp"-->
-        <!--android:paddingLeft="8dp"-->
-        <!--android:paddingRight="8dp"-->
-        <!--android:visibility="gone"/>-->
-
-</RelativeLayout>
+</LinearLayout>
