--- a/app/src/main/res/layout/rewards_fragment.xml
+++ b/app/src/main/res/layout/rewards_fragment.xml
@@ -1,78 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<!--
-  ~ Copyright (c) 2014 Staples, Inc. All rights reserved.
-  -->
-
 <app.staples.mobile.cfa.widget.AnimatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:other="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/staples_white">
 
     <!--rewards membership card-->
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <android.support.v7.widget.CardView
+    <android.support.v7.widget.CardView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="@dimen/margin_16dp"
+        android:layout_marginBottom="@dimen/margin_16dp"
+        app:contentPadding="@dimen/verticalspacing_8dp"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="4dp">
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="@dimen/margin_16dp"
-            android:layout_marginBottom="@dimen/margin_16dp"
-            other:contentPadding="@dimen/verticalspacing_8dp"
-            other:cardCornerRadius="8dp"
-            other:cardElevation="4dp"
-            >
-
-            <RelativeLayout
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/member_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                >
-                <!--android:background="@drawable/rectangle_frame"-->
-                <TextView
-                    android:id="@+id/member_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:textSize="@dimen/fontsize_20sp"/>
-                <TextView
-                    android:id="@+id/member_duration"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:layout_below="@id/member_name"
-                    android:textSize="@dimen/fontsize_14sp"/>
-                <TextView
-                    android:id="@+id/rewards_number_label"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:layout_below="@id/member_duration"
-                    android:textSize="@dimen/fontsize_18sp"/>
-
-                <app.staples.mobile.cfa.widget.Numeric39Barcode
-                    android:id="@+id/rewards_number_barcode39"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:padding="@dimen/verticalspacing_8dp"
-                    android:layout_below="@id/rewards_number_label"
-                    other:barcodeHeight="36dp"
-                    other:barcodeColor="@color/staples_black"
-                    />
-                <TextView
-                    android:id="@+id/rewards_number"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:layout_below="@id/rewards_number_barcode39"
-                    android:textSize="@dimen/fontsize_20sp"/>
-            </RelativeLayout>
-        </android.support.v7.widget.CardView>
-    </RelativeLayout>
+                android:layout_gravity="center_horizontal"
+                android:textSize="@dimen/fontsize_20sp"/>
+            <TextView
+                android:id="@+id/member_duration"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:textSize="@dimen/fontsize_14sp"/>
+            <TextView
+                android:id="@+id/rewards_number_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:textSize="@dimen/fontsize_18sp"/>
+            <com.staples.mobile.common.widget.Code128CBarcode
+                android:id="@+id/rewards_number_barcode"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/barcode_height"
+                android:layout_gravity="center_horizontal"
+                android:gravity="center"
+                android:padding="16dp"
+                app:maxScale="2dp"/>
+            <TextView
+                android:id="@+id/rewards_number"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:textSize="@dimen/fontsize_20sp"/>
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
 
     <!--tabbed section-->
     <TabHost
