--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -75,6 +75,9 @@
 
     <dimen name="div_line">1px</dimen>
 
+    <dimen name="barcode_height">64dp</dimen>
+    <dimen name="barcode_safety">16dp</dimen>
+
     <!--Home screen-->
     <dimen name="home_store_wrapper_padding">8dp</dimen>
     <dimen name="home_message_bar_height">50dp</dimen>
