--- a/app/src/main/res/layout/barcode_fragment.xml
+++ b/app/src/main/res/layout/barcode_fragment.xml
@@ -1,21 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
-<app.staples.mobile.cfa.widget.AnimatorLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
+<app.staples.mobile.cfa.widget.AnimatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:layout_gravity="center">
-    <com.staples.mobile.common.widget.Code128CBarcode
-        android:id="@+id/barcode"
+
+    <android.support.v7.widget.CardView
         android:layout_width="wrap_content"
-        android:layout_height="@dimen/barcode_height"
-        android:layout_gravity="center"
-        android:padding="@dimen/margin_16dp"
-        app:maxScale="2dp"/>
-    <TextView
-        android:id="@+id/caption"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/barcode_height"
-        android:layout_gravity="center"
-        android:textSize="@dimen/fontsize_16sp"
-        android:textColor="@color/staples_black"/>
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        app:cardCornerRadius="4dp"
+        app:cardElevation="4dp">
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:paddingTop="@dimen/verticalspacing_16dp"
+                android:paddingBottom="@dimen/verticalspacing_16dp"
+                android:paddingLeft="@dimen/verticalspacing_24dp"
+                android:background="@color/staples_red">
+
+                <TextView
+                    android:id="@+id/reward_coupon_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/staples_white"
+                    android:textSize="@dimen/fontsize_18sp"
+                    android:text="@string/rewards_list_tabtitle" />
+
+                <TextView
+                    android:id="@+id/reward_coupon_value"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/fontsize_18sp"
+                    android:textColor="@color/staples_white"
+                    android:text="$20:00" />
+
+                <TextView
+                    android:id="@+id/reward_coupon_expire"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/fontsize_12sp"
+                    android:textColor="@color/staples_white"
+                    android:text="expires 07/04/15/" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/rewards_coupon_text_label"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="@string/rewards_coupon_text_label"
+                android:textSize="@dimen/fontsize_16sp"
+                android:textColor="@color/staples_dark_gray"
+                android:paddingLeft="@dimen/margin_24dp"
+                android:layout_marginTop="@dimen/verticalspacing_24dp"
+                android:layout_marginBottom="@dimen/verticalspacing_24dp" />
+
+            <com.staples.mobile.common.widget.Code128CBarcode
+                android:id="@+id/barcode"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/barcode_height"
+                android:layout_gravity="center"
+                android:paddingLeft="@dimen/margin_24dp"
+                android:paddingRight="@dimen/margin_24dp"
+                app:maxScale="2dp" />
+
+            <TextView
+                android:id="@+id/caption"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:textSize="@dimen/fontsize_24sp"
+                android:textColor="@color/staples_black"
+                android:layout_marginTop="@dimen/verticalspacing_16dp"
+                android:layout_marginBottom="@dimen/verticalspacing_24dp" />
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
 </app.staples.mobile.cfa.widget.AnimatorLayout>
