--- a/app/src/main/res/layout/coupon_item_redeemable.xml
+++ b/app/src/main/res/layout/coupon_item_redeemable.xml
@@ -5,44 +5,76 @@
     android:layout_height="wrap_content"
     android:paddingTop="4dp"
     android:paddingBottom="4dp"
-    android:orientation="horizontal">
-    <TextView
-        android:id="@+id/coupon_amount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:minWidth="72dp"
-        android:layout_gravity="center_vertical"
-        android:gravity="right"
-        android:textSize="@dimen/fontsize_16sp"
-        android:textColor="@color/staples_black"/>
+    android:orientation="vertical">
+
+    <LinearLayout android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/coupon_amount"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="@dimen/verticalspacing_16dp"
+            android:textSize="@dimen/fontsize_16sp"
+            android:textColor="@color/staples_black"/>
+
+<!-- Expand button not implemented yet
+        <ImageView
+            android:id="@+id/reward_expand_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end|center_vertical"
+            android:layout_marginLeft="8dp"
+            android:src="@drawable/ic_expand_more_black"
+            android:visibility="visible"/>
+Expand button not implemented yet -->
+
+    </LinearLayout>
+
+
     <TextView
         android:id="@+id/coupon_expire"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:layout_gravity="center_vertical"
-        android:gravity="center"
+        android:layout_marginLeft="@dimen/verticalspacing_16dp"
         android:textSize="@dimen/fontsize_16sp"
         android:textColor="@color/staples_black"/>
-    <Button
-        android:id="@+id/reward_add_button"
-        android:layout_width="60dp"
-        android:layout_height="36dp"
-        android:layout_gravity="right|center_vertical"
-        android:background="@drawable/rounded_corner_green"
-        android:text="@string/add"
-        android:textSize="@dimen/fontsize_16sp"
-        android:textColor="@color/staples_white"/>
-    <Button
-        android:id="@+id/reward_view_button"
-        android:layout_width="60dp"
-        android:layout_height="36dp"
-        android:layout_gravity="right|center_vertical"
-        android:layout_marginLeft="8dp"
-        android:background="@drawable/rounded_corner_green"
-        android:text="@string/view"
-        android:textSize="@dimen/fontsize_16sp"
-        android:textColor="@color/staples_white"/>
+
+    <LinearLayout
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:gravity="center_horizontal"
+        android:layout_marginTop="@dimen/verticalspacing_24dp"
+        android:layout_marginLeft="@dimen/verticalspacing_24dp"
+        android:layout_marginRight="@dimen/verticalspacing_24dp">
+        <Button
+            android:id="@+id/reward_add_button"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right|center_vertical"
+            android:background="@drawable/rounded_corner_green"
+            android:layout_weight="1"
+            android:text="@string/add"
+            android:textSize="@dimen/fontsize_16sp"
+            android:textColor="@color/staples_white"
+            />
+        <Button
+            android:id="@+id/reward_view_button"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_gravity="right|center_vertical"
+            android:layout_marginLeft="8dp"
+            android:background="@drawable/rounded_corner_green"
+            android:text="@string/view"
+            android:textSize="@dimen/fontsize_16sp"
+            android:textColor="@color/staples_white"/>
+    </LinearLayout>
     <!--REMOVE button (only used in rewards dashboard)-->
     <ImageView
         android:id="@+id/reward_remove_button"
