--- a/app/src/main/res/layout/rewards_fragment.xml
+++ b/app/src/main/res/layout/rewards_fragment.xml
@@ -8,24 +8,40 @@
 
     <!--rewards membership card-->
     <android.support.v7.widget.CardView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="@dimen/margin_16dp"
-        android:layout_marginBottom="@dimen/margin_16dp"
-        app:contentPadding="@dimen/verticalspacing_8dp"
+        android:layout_margin="@dimen/verticalspacing_24dp"
         app:cardCornerRadius="8dp"
         app:cardElevation="4dp">
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-            <TextView
-                android:id="@+id/member_name"
-                android:layout_width="wrap_content"
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:textSize="@dimen/fontsize_20sp"/>
+                android:orientation="vertical"
+                android:paddingTop="@dimen/verticalspacing_8dp"
+                android:paddingBottom="@dimen/verticalspacing_16dp"
+                android:paddingLeft="@dimen/verticalspacing_56dp"
+                android:background="@color/staples_red">
+                <TextView
+                    android:id="@+id/member_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:textColor="@color/staples_white"
+                    android:textSize="@dimen/fontsize_18sp"/>
+                <TextView
+                    android:id="@+id/rewards_number"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/staples_white"
+                    android:layout_gravity="center_horizontal"
+                    android:textSize="@dimen/fontsize_24sp"/>
+            </LinearLayout>
             <TextView
                 android:id="@+id/member_duration"
                 android:layout_width="wrap_content"
@@ -46,12 +62,7 @@
                 android:gravity="center"
                 android:padding="16dp"
                 app:maxScale="2dp"/>
-            <TextView
-                android:id="@+id/rewards_number"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:textSize="@dimen/fontsize_20sp"/>
+
         </LinearLayout>
     </android.support.v7.widget.CardView>
 
